--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@11ty/eleventy": "^0.9.0",
     "bulma": "^0.7.5",
+    "markdown-it": "^10.0.0",
+    "markdown-it-anchor": "^5.2.4",
     "sass": "^1.22.10"
   },
   "devDependencies": {
