--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@openlab/geco-home-site",
-  "description": "Setup with puggle",
+  "name": "@openlab/gecotoolbox.io",
+  "description": "gE.CO toolbox website",
   "version": "0.0.0",
   "private": true,
-  "repository": "digitalinteraction/geco-home-site",
+  "repository": "digitalinteraction/gecotoolbox.io",
   "author": "",
   "license": "MIT",
   "scripts": {
@@ -33,7 +33,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^4.3.6",
+    "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
     "prettier": "^1.16.4"
   },
@@ -50,6 +50,5 @@
     "*.{js,json,css,md,ts,tsx}": [
       "prettier --write"
     ]
-  },
-  "main": "src/index.js"
+  }
 }
